@@ -4375,7 +4375,7 @@ HttpSM::do_http_server_open(bool raw)
 
   if (raw == false && t_state.txn_conf->share_server_sessions &&
       (t_state.txn_conf->keep_alive_post_out == 1 || t_state.hdr_info.request_content_length == 0) &&
-      ua_session != NULL) {
+       !is_private() && ua_session != NULL) {
     shared_result = httpSessionManager.acquire_session(this,    // state machine
                                                        &t_state.current.server->addr.sa,    // ip + port
                                                        t_state.current.server->name,    // hostname
@@ -4402,7 +4402,7 @@ HttpSM::do_http_server_open(bool raw)
   // This bug was due to when share_server_sessions is set to 0
   // and we have keep-alive, we are trying to open a new server session
   // when we already have an attached server session.
-  else if ((!t_state.txn_conf->share_server_sessions) && (ua_session != NULL)) {
+  else if ((!t_state.txn_conf->share_server_sessions || is_private()) && (ua_session != NULL)) {
     HttpServerSession *existing_ss = ua_session->get_server_session();
 
     if (existing_ss) {
@@ -5445,19 +5445,11 @@ HttpSM::setup_server_send_request()
     hdr_length += server_entry->write_buffer->write(t_state.internal_msg_buffer, msg_len);
     server_request_body_bytes = msg_len;
   }
-  // If we are sending authorizations headers, mark the connection
-  //  private
-  /*if (t_state.hdr_info.server_request.presence(MIME_PRESENCE_AUTHORIZATION | MIME_PRESENCE_PROXY_AUTHORIZATION)) {
-    server_session->private_session = true;
-    if (t_state.hdr_info.server_request.presence(MIME_PRESENCE_AUTHORIZATION)) {
-      // we need this variable for the session based Authentication
-      // like NTLM.
-      server_session->www_auth_content = true;
-    }
-  }*/
-  /*if (server_session->www_auth_content && t_state.www_auth_content == HttpTransact::CACHE_AUTH_NONE) {
-    t_state.www_auth_content = HttpTransact::CACHE_AUTH_TRUE;
-  }*/
+  // If we are sending authorizations headers, mark the connection private
+  if (t_state.hdr_info.server_request.presence(MIME_PRESENCE_AUTHORIZATION | MIME_PRESENCE_PROXY_AUTHORIZATION
+					       | MIME_PRESENCE_WWW_AUTHENTICATE)) {
+      server_session->private_session = true;
+  }
   milestones.server_begin_write = ink_get_hrtime();
   server_entry->write_vio = server_entry->vc->do_io_write(this, hdr_length, buf_start);
 }
@@ -7301,3 +7293,17 @@ HttpSM::set_server_session_private(bool private_session)
   return false;
 }
 
+inline bool
+HttpSM::is_private()
+{
+    bool res = false;
+    if (server_session) {
+        res = server_session->private_session;
+    } else if (ua_session) {
+        HttpServerSession * ss = ua_session->get_server_session();
+        if (ss) {
+            res = ss->private_session;
+        }
+    }
+    return res;
+}
