@@ -262,6 +262,7 @@ public:
 
   void add_history_entry(const char *fileline, int event, int reentrant);
   void add_cache_sm();
+  bool is_private();
   bool decide_cached_url(URL * s_url);
 
   int64_t sm_id;
